# forge

./: .gitignore  AGENT.md  AGENTS.md  BRANCHING.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  GUIDE.md  README.en.md  README.md  README.zh-CN.md  SKILLS-ANALYSIS.md  SKILLS-CATALOG.md  USAGE-GUIDE.md  install.ps1  install.sh  mcp.json.template  package-lock.json  package.json  settings.json.template
.github/: CODEOWNERS  pull_request_template.md  release.yml
.trellis/: .template-hashes.json
agents/: architect.md  build-error-resolver.md  check.md  code-reviewer.md  database-reviewer.md  debug.md  dispatch.md  doc-updater.md  e2e-runner.md  implement.md  plan.md  planner.md  refactor-cleaner.md  research.md  security-reviewer.md  tdd-guide.md
apps/forge-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/forge-desktop/src-tauri/src/: main.rs  models.rs  services.rs
codex/: AGENTS.md.template  README.md  install-codex.ps1  install-codex.sh
commands/: build-fix.md  code-review.md  e2e.md  evolve.md  instinct-status.md  learn.md  refactor-clean.md  skill-create.md  tdd.md  update-docs.md  verify.md
contexts/: research.md
core/: README.md  capability-matrix.json  domain-mcp-matrix.json  learning-promotion-rules.json  mcp-servers.json  memory-layout.md  problem-solution-schema.json  registry-sources.json  role-display.json  role-mcp-matrix.json  skill-overrides.json  skill-registry.json  tool-defaults.json
docs/: CLAUDE-DESKTOP-CAPABILITIES.md  CLIENT-CAPABILITY-MATRIX.md  MCP-GLOBAL-SYNC.md  MCP-SETUP-GUIDE.md  MULTI-CLIENT-ENTRY.md  README.md  (+1 more)
(+274 files in other folders)
