[package]
name = "forge"
version = "0.4.6"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-escape = "0.1"
tauri = { version = "2.0", features = [] }
ureq = { version = "2.10", features = ["json"] }
urlencoding = "2.1"
